# a2

./: .gitignore  CMakeLists.txt  HOWTO.md  README.md  requirements.txt
data/conf/: bob_env.json  dog_gaussian_env.json  dog_quadratic_env.json
data/environment/: Ground.rbs
data/robots/bob/: bobSimple.rbs
data/robots/go1/: go1.rbs  go1.rs
data/robots/go1/meshes/: calf.mtl  depthCamera.mtl  thigh.mtl  thigh_mirror.mtl  trunk.mtl  ultraSound.mtl
data/robots/simple/: dog.rbs
ext/: CMakeLists.txt
jobs/: 01_quadratic_reward  02_gaussian_reward  03_bob
misc/: settings.json
src/libs/: CMakeLists.txt
src/libs/gui/imgui_widgets/include/imgui_widgets/: imfilebrowser.h
src/libs/gui/include/crl-basic/gui/: application.h  mesh.h  model.h
src/libs/gui/src/: application.cpp  mesh.cpp
src/libs/loco/: CMakeLists.txt
src/libs/loco/include/loco/: BodyFrame.h  LeggedLocomotionData.h  LeggedRobot.h
src/libs/loco/include/loco/control/: LocomotionController.h
src/libs/loco/include/loco/gait/: ContactSchedule.h
src/libs/loco/include/loco/planner/: LimbMotionPlan.h  LocomotionTrajectoryPlanner.h
src/libs/loco/include/loco/robot/: GeneralizedCoordinatesRobotRepresentation.h  RB.h  RBEngine.h  RBJoint.h  RBLoader.h  RBProperties.h  RBRenderer.h  RBState.h  RBUtils.h  Robot.h  RobotState.h
src/libs/loco/include/loco/simulation/ode/: ODEContactForce.h  ODERBEngine.h
src/libs/loco/include/loco/utils/: ConvexHull.h  MathUtils.h  PlotUtils.h  TrajectoryUtils.h
src/libs/loco/src/: LeggedRobot.cpp
src/libs/loco/src/gait/: ContactSchedule.cpp
src/libs/loco/src/planner/: LocomotionTrajectoryPlanner.cpp
src/libs/loco/src/robot/: GeneralizedCoordinatesRobotRepresentation.cpp  RB.cpp  RBEngine.cpp  RBJoint.cpp  RBLoader.cpp  RBProperties.cpp  RBRenderer.cpp  RBState.cpp  RBUtils.cpp  Robot.cpp  RobotState.cpp
src/libs/loco/src/simulation/: ODERBEngine.cpp
src/libs/pyloco/: CMakeLists.txt  cmake_variables.py.in
src/libs/pyloco/include/pyloco/: PySimulator.h
src/libs/pyloco/src/: pyloco.cpp
src/libs/pylocobase/: CMakeLists.txt
src/libs/pylocobase/include/pylocobase/: RobotInfo.h  Viewer.h
src/libs/pylocobase/include/pylocobase/sim/: Simulator.h  VanillaSimulator.h
src/libs/pylocobase/src/: Simulator.cpp  Viewer.cpp
src/python/: main.py  scripts.py
src/python/pylocogym/: .gitignore  __init__.py
src/python/pylocogym/algorithms/: __init__.py  custom_ppo.py
src/python/pylocogym/callbacks/: __init__.py  checkpoint_save_callback.py  record_eval_callback.py  tensorboard_callback.py
src/python/pylocogym/envs/: PylocoEnv.py  VanillaEnv.py  __init__.py
src/python/pylocogym/envs/rewards/bob/: humanoid_reward.py
src/python/pylocogym/envs/rewards/dog/: gaussian_reward.py  quadratic_reward.py
src/python/pylocogym/envs/rewards/utils/: utils.py
src/python/tests/: 01_test_quadratic_reward.py  02_test_gaussian_reward.py  03_test_human_reward.py
src/python/tests/pickled_files/: test_data_bob1678969934.2863793.pickle  test_data_bob1679334591.29026.pickle  test_data_dog_gaussian1678969681.2247353.pickle  test_data_dog_quadratic1678807612.150153.pickle
